Create Dashboard and submit expense page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -64,3 +64,8 @@ select:focus[data-flux-control] {
 /* \[:where(&)\]:size-4 {
     @apply size-4;
 } */
+
+
+.pending-expense-count {
+    margin-left: 5px;
+}
